# GridFormatConverter

./: CMakeLists.txt  README.md
src/: grid_format_converter.cpp  main.cpp  mesh.cpp  mesh.h
test/: test.msh  test2.msh  test3.msh
